--- a/moviesearchPresentation/index.html
+++ b/moviesearchPresentation/index.html
@@ -138,8 +138,14 @@
       <img src="screenshots/details.jpg" alt="Details Screen">
     </div>
 
-
-  </div>
+    <h2>🎥 Demo Video</h2>
+    <div style="text-align:center;">
+    <video width="30%" style="align-items: center;" controls>
+      <source src="demo.mp4" type="video/mp4">
+      Ο περιηγητής σας δεν υποστηρίζει βίντεο.
+    </video>
+    </div>
+      </div>
 
   <footer>
     Made with ❤️ using Android & Kotlin | TMDB API Integration | George Christopoulos
