--- a/pokemonexplorerpresentation/index.html
+++ b/pokemonexplorerpresentation/index.html
@@ -134,8 +134,8 @@
            <code>Video Presentation</code> .
         </p>
         <div class="video-wrap">
-          <video id="demoVideo" class="video" controls poster="" preload="metadata">
-            <source src="assets/video.mp4" type="video/mp4" />
+          <video id="demoVideo"  class="video" controls poster="" preload="metadata">
+            <source src="assets/screens/video.mp4" type="video/mp4" />
             Το πρόγραμμα περιήγησής σου δεν υποστηρίζει ενσωματωμένα βίντεο.
           </video>
         </div>
