Update movie list app

--- a/moviesearchPresentation/index.html
+++ b/moviesearchPresentation/index.html
@@ -92,6 +92,7 @@
       <span class="tech">Coil</span>
       <span class="tech">Coroutines</span>
       <span class="tech">Navigation Compose</span>
+      <span class="tech">Clean Architecture</span>
     </div>
         <div style="text-align:center;">
       <a href="https://github.com/Georgechrp/MovieSearch" target="_blank" class="btn">🔗 View on GitHub</a>
@@ -132,7 +133,7 @@
             </pre>
     <h2>📸 Screenshots</h2>
     <div class="screenshots">
-      <img src="screenshots/splashscreen.jpg" alt="Splashs creen">
+      <img src="screenshots/splashscreen.jpg" alt="Splash creen">
       <img src="screenshots/genres.jpg" alt="Genres Screen">
       <img src="screenshots/search.jpg" alt="Search Screen">
       <img src="screenshots/details.jpg" alt="Details Screen">
