update pokemon pres

--- a/pokemonexplorerpresentation/index.html
+++ b/pokemonexplorerpresentation/index.html
@@ -84,7 +84,7 @@
       <div class="container">
         <h3>Πώς λειτουργεί</h3>
         <ol class="steps">
-          <li>Ο χρήστης διαλέγει τύπο (π.χ. Fire) από drop-down.</li>
+          <li>Ο χρήστης διαλέγει τύπο (π.χ. Fire) από τη Αρχική Οθόνη</li>
           <li>Η εφαρμογή καλεί PokéAPI για να πάρει τα Pokémon που αντιστοιχούν στον τύπο.</li>
           <li>Προβάλλονται τα πρώτα 10 αποτελέσματα με κουμπί για περισσότερα.</li>
           <li>Η αναζήτηση φιλτράρει τα αποτελέσματα στον τρέχοντα τύπο.</li>
@@ -148,11 +148,11 @@
           <h3>Εγκατάσταση & Εκτέλεση (Android / Kotlin)</h3>
           <pre class="code"><code>
           # Προαπαιτούμενα
-          - Android Studio (Giraffe ή νεότερο)
-          - JDK 17
+          - Android Studio 2025
+          - minSDK = 24
 
           # Βήματα
-          1. Κάνε clone το repo
+          1. Clone το repo
           2. Άνοιξέ το στο Android Studio
           3. Ρύθμισε το minSdk/targetSdk (προτεινόμενο: 24+/34)
           4. Τρέξε το project σε emulator ή συσκευή
@@ -170,7 +170,7 @@
       </div>
     </section>
 
-    <section id="faq" class="section alt">
+  <!--  <section id="faq" class="section alt">
       <div class="container">
         <h3>FAQ</h3>
         <div class="accordion">
@@ -191,7 +191,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
   </main>
 
   <footer class="site-footer">
